# honeypot-threat-intelligence-pipeline

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.vm.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-vm.yml
docker/backend/: Dockerfile  entrypoint.sh
docker/cowrie/: docker-compose.yml
docker/frontend/: Dockerfile  nginx.conf
docs/: architecture.md  attack-guide.md  deployment.md  live-lab-demo.md  project-summary.md  safety-model.md
examples/: cowrie.sample.ndjson
frontend/: package-lock.json  package.json  vite.config.ts
migrations/: 0001_create_auth_tables.sql
scripts/: apply-blocklist.sh  attack-brute-force.sh  attack-cloud-metadata.sh  attack-container-escape.sh  attack-credential-access.sh  attack-cryptomining.sh  attack-data-exfiltration.sh  attack-ddos.sh  attack-defense-evasion.sh  attack-destructive-action.sh  attack-full-chain.sh  attack-lateral-movement.sh  attack-malware-download.sh  attack-network-scan.sh  attack-obfuscation.sh  attack-persistence.sh  attack-privilege-escalation.sh  attack-recon.sh  attack-reverse-shell.sh  attack-simulator.py  ddos-attack.py  device-agent.py  generate-thesis-docx.py  honeypot-attack.py  inject-cowrie-log.sh  lab-demo.sh  update-thesis-docx.py
sharingan-frontend/: index.html
tests/: test_auth.py  test_classification.py  test_cli.py  test_cowrie.py  test_dashboard.py  test_database.py  test_devices.py  test_enrichment.py  test_import_compat.py  test_metrics.py  test_output.py  test_response.py  test_risk.py  test_simulator.py
(+73 files in other folders)
