[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "honeypot-threat-intelligence-pipeline"
version = "0.1.0"
description = "Foundational parsing and enrichment pipeline for honeypot telemetry."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ata Demir Alcinar" }
]
dependencies = [
  "Flask>=3.0.0",
  "flask-cors>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
normalize-cowrie = "honeypot_pipeline.cli:main"
honeypot-dashboard = "honeypot_pipeline.dashboard:main"
honeypot-report = "honeypot_pipeline.reporting:main"
honeypot-block = "honeypot_pipeline.response:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
